created route for dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>EziPort</h1>
 <nav>
-  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
 </nav>
 <router-outlet></router-outlet>
