--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <nav>
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
+  <a routerLink="/register" routerLinkActive="active">Register</a>
 </nav>
 <router-outlet></router-outlet>
 
