Initial work on admin component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 <nav>
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
-  <a routerLink="/register" routerLinkActive="active">Register</a>
+  <a routerLink="/register" routerLinkActive="active">Register</a>  
+  <a routerLink="/administration" routerLinkActive="active">Admin</a>
 </nav>
 <router-outlet></router-outlet>
 
