--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>EziPort</h1>
-<nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/login" routerLinkActive="active">Log In</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="container">
+    <h1>EziPort</h1>
+    <nav>
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+      <a routerLink="/login" routerLinkActive="active">Log In</a>
+      <br><br>
+    </nav>
+    <router-outlet></router-outlet> 
+</div>
+
 
 
 
