--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
     <h2 class="form-signin-heading text-center text-uppercase">Login</h2>
     <div class="form-group">
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="email" required id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     </div>
     <div class="form-group">
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" required id="inputPassword" class="form-control" placeholder="Password" required>
     </div>
     <div class="checkbox">
       <label>
@@ -16,9 +16,9 @@
       </label>
     </div>
     <div>
-      <span>Not a member? Register</span>
+      <span>Not a member? <a routerLink="/register">Register</a></span>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+    <button class="btn btn-lg btn-primary btn-block" routerLink="/" type="submit">Log in</button>
   </div>
 
 </div> <!-- /container -->
