--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,11 +5,11 @@
 
     <div class="form-group">
       <label for="inputFirstName" class="sr-only">First Name</label>
-      <input type="email" id="inputFirstName" class="form-control" placeholder="First Name" required autofocus>
+      <input type="text" id="inputFirstName" class="form-control" placeholder="First Name" required autofocus>
     </div>
     <div class="form-group">
       <label for="inputLastName" class="sr-only">Last Name</label>
-      <input type="email" id="inputLastName" class="form-control" placeholder="Last Name" required autofocus>
+      <input type="text" id="inputLastName" class="form-control" placeholder="Last Name" required autofocus>
     </div>
     <div class="form-group">
       <label for="inputEmail" class="sr-only">Email address</label>
@@ -20,9 +20,9 @@
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     </div>
     <div>
-      <span>Already a member? Login</span>
+      <span>Already a member? <a routerLink="/login">Login</a></span>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    <button class="btn btn-lg btn-primary btn-block" routerLink="/login" type="submit">Register</button>
   </div>
 
 </div> <!-- /container -->
