--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+  }
+  
+#button1{
+    color:aliceblue; 
+    text-decoration:none;
+}
+
+#button1:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.well {
+
+    margin-bottom: 40px;
+    margin-top: 130px;
+    border-radius: 1%;
+    background: #b7cae8;
+    }
+    
+    
