Admin approval and disapproval working and refreshing page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
   <a routerLink="/register" routerLinkActive="active">Register</a>  
-  <a routerLink="/Package" routerLinkActive="active">Admin</a>
+  <a routerLink="/Package" routerLinkActive="active">Packages</a>
 </nav>
 <router-outlet></router-outlet>
 
