--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <h1>EziPort</h1>
 <nav>
-  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
   <a routerLink="/register" routerLinkActive="active">Register</a>  
   <a routerLink="/Package" routerLinkActive="active">Packages</a>
