--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,32 @@
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
   }
+  body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+  }
+  
+  
+  /* Custom page CSS
+  -------------------------------------------------- */
+  /* Not required for template or sticky footer method. */
+  
+  body > .container {
+    padding: 60px 15px 0;
+  }
+  
+  .footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  
+  code {
+    font-size: 80%;
+  }
+  
   
 #button1{
     color:aliceblue; 
