--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,30 @@
-<nav class="navbar navbar-inverse" style="background-color:#007bff;">
-<ul class="nav nav-pills" role="tablist">
-    <a routerLink="/" routerLinkActive="active" style="color:whitesmoke; margin-right:10px; text-decoration:none"> <h1>Eziport</h1> </a>
-      <li class="nav-item">
-        <a routerLink="/home" routerLinkActive="active" style="font-size:18px" class="nav-link active" data-toggle="pill">Home</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="/login" routerLinkActive="active" class="nav-link" data-toggle="pill" style="color:rgb(229, 236, 228); font-size:18px;">Log in</a>
-      </li>
-      <li class="nav-item">
-        <a a routerLink="/register" routerLinkActive="active" class="nav-link" data-toggle="pill" style="color:antiquewhite; font-size:18px;">Register</a>
-      </li>
-      <li class="nav-item">
-          <a routerLink="/package" routerLinkActive="active" class="nav-link" data-toggle="pill" style="color:antiquewhite; font-size:18px;">Admin</a>
+<header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+    <a class="navbar-brand" href="/home">EziPort</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a routerLink="/myPackages" class="nav-link text-white" href="#">Packages <span class="sr-only">(current)</span></a>
         </li>
-    </ul>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/myRequest" href="#">Requests</a>
+        </li>
+      </ul>
+      <form class="form-inline">
+        <button type="button" data-toggle="tooltip" title="Logout" data-placement="left" class="material-icons btn btn-link btn-lg" id="button1">power_settings_new</button>  
+      </form>
+    </div>
+  </nav>
+</header>
+<body class="container">
+    <router-outlet></router-outlet>
 
-    <form class="form-inline">
-      <i style = "color:beige"class="material-icons">person</i>
-      <button type="button" class="btn btn-link" id="button1"> Log out</button>  
-    </form>
-</nav> 
-<router-outlet></router-outlet>
+</body>
+
 
 
 
