--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <nav>
       <a routerLink="/home" routerLinkActive="active">Home</a>
       <a routerLink="/login" routerLinkActive="active">Log In</a>
+      <a routerLink="/mypackages" routerLinkActive="active">My Packages</a>
       <br><br>
     </nav>
     <router-outlet></router-outlet> 
