--- a/src/app/send-search-form/send-search-form.component.html
+++ b/src/app/send-search-form/send-search-form.component.html
@@ -1,33 +1,24 @@
 
   <h3>Send Search Request Form</h3  >
   <div *ngIf="message">
-    <div *ngIf="message.type == 'success'" class="alert alert-success">
-      <strong>Success!</strong> {{message.value}}
+
+
+    <div class="alert alert-info">
+      <strong>Info!</strong> {{message.message}}
     </div>
 
-    <div *ngIf="message.type == 'info'" class="alert alert-info">
-      <strong>Info!</strong> {{message.value}}
-    </div>
-
-    <div *ngIf="message.type == 'warning'" class="alert alert-warning">
-      <strong>Warning!</strong> {{message.value}}
-    </div>
-
-    <div *ngIf="message.type == 'danger'" class="alert alert-danger">
-      <strong>Danger!</strong> {{message.value}}
-    </div>
   </div>
   <form *ngIf="!selectedTransfer" (ngSubmit)="onSubmit()" #sendSearchRequestForm="ngForm">
     <div class="form-group">
       <label for="from">From</label>
       <select [(ngModel)]="model.from" class="form-control" id="from" name="from" required>
-        <option *ngFor="let country of countries" [value]="country">{{country}}</option>
+        <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
       </select>
     </div>
     <div class="form-group">
       <label for="to">To</label>
       <select [(ngModel)]="model.to" class="form-control" id="to" name="to" required>
-        <option *ngFor="let country of countries" [value]="country">{{country}}</option>
+        <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
       </select>
     </div>
 
@@ -38,7 +29,7 @@
 
 
 
-    <button [disabled]="!sendSearchRequestForm.form.valid" type="submit" class="btn btn-success">Submit</button>
+    <button [disabled]="!sendSearchRequestForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
 
   </form>
 
@@ -54,9 +45,9 @@
           </thead>
           <tbody>
               <tr *ngFor="let transferRequest of transferRequests">
-                  <td>{{transferRequest.on}}</td>
+                  <td>{{transferRequest.date}}</td>
                   <td>{{transferRequest.weight}} kg</td>
-                  <td><button (click)="OnSelect(transferRequest)" class="btn btn-success">Select</button></td>
+                  <td><button (click)="OnSelect(transferRequest)" class="btn btn-primary">Select</button></td>
                 </tr>
           </tbody>
         </table>
@@ -75,6 +66,6 @@
 
 
 
-    <button [disabled]="!submitPackageInfo.form.valid" type="submit" class="btn btn-success">Book</button>
+    <button [disabled]="!submitPackageInfo.form.valid" type="submit" class="btn btn-primary">Book</button>
 
   </form>
