--- a/src/app/transfer-request-form/transfer-request-form.component.html
+++ b/src/app/transfer-request-form/transfer-request-form.component.html
@@ -20,13 +20,13 @@
   <div class="form-group">
     <label for="from">From</label>
     <select [(ngModel)]="transferRequest.from" class="form-control" id="from" name="from" required>
-      <option *ngFor="let country of countries" [value]="country">{{country}}</option>
+      <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="to">To</label>
     <select [(ngModel)]="transferRequest.to" class="form-control" id="to" name="to" required>
-      <option *ngFor="let country of countries" [value]="country">{{country}}</option>
+      <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
     </select>
   </div>
 
