--- a/src/styles.css
+++ b/src/styles.css
@@ -20,8 +20,8 @@
     border-radius: 1%;
     background: #b7cae8;
     }
-    
+
 .container {
-    padding-top: 
-   } 
+    padding-top: 51px;
+    }    
     
