--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
 <header>
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-    <a class="navbar-brand" href="/home">EziPort</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="navbar-header">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" routerLink="/home"><img style="height: 45px;	width: 120px;" src="assets/images/logo6-img.png" alt="Dispute Bills"></a>
+    </div>
+
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a routerLink="/mypackages" class="nav-link text-white" href="#">Packages <span class="sr-only">(current)</span></a>
+          <a routerLink="/mypackages" class="nav-link text-white" href="#">My Packages <span class="sr-only"></span></a>
         </li>
       </ul>
       <form class="form-inline">
@@ -17,10 +20,9 @@
     </div>
   </nav>
 </header>
-<body class="container">
+<div class="container">
     <router-outlet></router-outlet>
-
-</body>
+</div>
 
 
 
