--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,14 @@
-<h1>
-  Welcome to EziPOrt
-</h1>
-<h3>
-    What do you want to do?
-  </h3>
-  <button (click) = "shownForm='send'" class="w3-button w3-blue">Send Package</button>
-  <button (click) = "shownForm='transfer'" class="w3-button w3-green">Transfer Package</button>
-
+<div class="container">
+  <ul class="tab-group">
+    <li class="tab active"><a (click) = "shownForm='send'">Send Package</a></li>
+    <li class="tab"><a (click) = "shownForm='transfer'">Transfer Package</a></li>
+  </ul>
+  
+  <!-- <button (click) = "shownForm='send'" class="w3-button w3-blue">Send Package</button>
+  <button (click) = "shownForm='transfer'" class="w3-button w3-green">Transfer Package</button> -->
+  
   <app-send-search-form *ngIf="shownForm == 'send'" class="send_search_form"></app-send-search-form>
   <app-transfer-request-form *ngIf="shownForm == 'transfer'" class="send_search_form"></app-transfer-request-form>
-
+    
+      
+</div>
