--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <header>
+  <h3>{{authService.getUserName()}}</h3>
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <a class="navbar-brand" href="/home">EziPort</a>
@@ -18,6 +19,7 @@
   </nav>
 </header>
 <body class="container">
+    
     <router-outlet></router-outlet>
 
 </body>
