--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
-<div class="container">
+<form class="container"  (ngSubmit)="setUser()" #loginForm="ngForm">
 
   <div class="form-signin">
     <h2 class="form-signin-heading text-center text-uppercase">Login</h2>
     <div class="form-group">
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" required id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input [(ngModel)]="user.username" name = "username" type="email" required id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     </div>
     <div class="form-group">
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" required id="inputPassword" class="form-control" placeholder="Password" required>
+      <input [(ngModel)]="user.password" name = "password" type="password" required id="inputPassword" class="form-control" placeholder="Password" required>
     </div>
     <div class="checkbox">
       <label>
@@ -18,8 +18,8 @@
     <div>
       <span>Not a member? <a routerLink="/register">Register</a></span>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" routerLink="/" type="submit">Log in</button>
+    <button [disabled]="!loginForm.valid"  class="btn btn-lg btn-primary btn-block"  type="submit">Log in</button>
   </div>
 
-</div> <!-- /container -->
+</form> <!-- /container -->
 
