--- a/src/app/mypackages/mypackages.component.html
+++ b/src/app/mypackages/mypackages.component.html
@@ -1,51 +1,76 @@
 <div class="container">
-    <ul class="tab-group">
-      <li class="tab active"><a (click) = "shownPackages='sendings'">Sent Packages</a></li>
-      <li class="tab"><a (click) = "shownPackages='transferings'">Transfered Packages</a></li>
-    </ul>
+  <ul class="tab-group">
+    <li class="tab active">
+      <a (click)="shownPackages='sendings'">Sending</a>
+    </li>
+    <li class="tab">
+      <a (click)="shownPackages='transferings'">Transfering</a>
+    </li>
+  </ul>
 
-    <div *ngIf = "shownPackages=='sendings'">
-        My sendings
-      </div>
-      
-      <div *ngIf = "shownPackages=='transferings'">
-        My transferings
-        <div *ngIf = "transferings">
-          {{transfering}}
-          <table class="w3-table-all">
-            <thead>
-              <tr class="w3-green">
-                <th>From</th>
-                <th>To</th>
-                <th>Date</th>
-                <th>Weight(Kg)</th>
-                <th>Status</th>
-                <th>Requests<br>Title      Weight       Action</th>
-              </tr>
-            </thead>
-            <tr *ngFor = "let transfering of transferings">
-              <td>{{transfering.countryFrom}}</td>
-              <td>{{transfering.countryTo}}</td>
-              <td>{{transfering.date}}</td>
-              <td>{{transfering.weight}}</td>
-              <td>{{transfering.status}}</td>
-              <td>
-                  <div class="row" *ngFor = "let sendingReq of  transfering.sendingList">
-                      <td>{{sendingReq.title}}</td>
-                      <td>{{sendingReq.weight}} kg</td>
-                      <td class = "margin-right" *ngIf = "sendingReq.status == 'PENDING'" (click) = "accept(transfering)" class="w3-button w3-green">Accept</td>
-                      <td *ngIf = "sendingReq.status =='PENDING'" (click) = "reject(transfering)" class="w3-button w3-red">Reject</td>
-                  </div>
-      
-              </td>
-            </tr>
-          </table>
-        </div>
-        
-      </div>
-  
-    
-      
+
+
+  <div *ngIf="shownPackages=='transferings'">
+    <div *ngIf="transferings">
+      <table class="w3-table-all">
+        <thead>
+          <tr class="w3-green">
+            <th>From</th>
+            <th>To</th>
+            <th>Date</th>
+            <th>Weight(Kg)</th>
+            <th>Status</th>
+            <th>Requests
+              <br>Title Weight Action</th>
+          </tr>
+        </thead>
+        <tr *ngFor="let transfering of transferings">
+          <td>{{transfering.countryFrom}}</td>
+          <td>{{transfering.countryTo}}</td>
+          <td>{{transfering.date | date:'dd/MM/yyyy'}}</td>
+          <td>{{transfering.weight}}</td>
+          <td>{{transfering.status}}</td>
+          <td>
+            <div class="row" *ngFor="let sendingReq of  transfering.sendingList">
+              <td>{{sendingReq.title}}</td>
+              <td>{{sendingReq.weight}} kg</td>
+              <td class="margin-right" *ngIf="sendingReq.status == 'PENDING'" (click)="accept(transfering)" class="w3-button w3-green">Accept</td>
+              <td *ngIf="sendingReq.status =='PENDING'" (click)="reject(transfering)" class="w3-button w3-red">Reject</td>
+            </div>
+
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
-  
-  
+
+    <div *ngIf="shownPackages=='sendings'">
+
+      <div *ngIf="sendings">
+        <table class="w3-table-all">
+          <thead>
+            <tr class="w3-blue">
+              <th>From</th>
+              <th>To</th>
+              <th>Date</th>
+              <th>Weight(Kg)</th>
+              <th>To address</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tr *ngFor="let sending of sendings">
+            <td>{{sending.countryFrom}}</td>
+            <td>{{sending.countryTo}}</td>
+            <td>{{sending.date | date:'dd/MM/yyyy'}}</td>
+            <td>{{sending.weight}}</td>
+            <td>{{sending.destination}}</td>
+            <td>{{sending.status}}</td>
+          </tr>
+        </table>
+      </div>
+
+    </div>
+
+
+
+  </div>
