--- a/src/app/transfer-request-form/transfer-request-form.component.html
+++ b/src/app/transfer-request-form/transfer-request-form.component.html
@@ -8,30 +8,31 @@
   
     </div>
 <form *ngIf="!message" (ngSubmit)="onSubmit()" #transferRequestForm="ngForm">
-  <div class="form-group">
+  <div class="required form-group">
     <label for="from">From</label>
     <select [(ngModel)]="transferRequest.from" class="form-control" id="from" name="from" required>
-      <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
+      <option *ngFor="let country of countries" [value]="country.name">{{country.code}} - {{country.name}}</option>
     </select>
   </div>
-  <div class="form-group">
+  <div class="required form-group">
     <label for="to">To</label>
     <select [(ngModel)]="transferRequest.to" class="form-control" id="to" name="to" required>
-      <option *ngFor="let country of countries" [value]="country">{{country.code}} - {{country.name}}</option>
+      <option *ngFor="let country of countries" [value]="country.name">{{country.code}} - {{country.name}}</option>
     </select>
   </div>
 
-  <div class="form-group">
+  <div class="required form-group">
     <label for="by">On</label>
     <input [(ngModel)]="transferRequest.on" name="by" type="date" class="form-control" id="by" required>
   </div>
 
-  <div class="form-group">
+  <div class="required form-group">
     <label for="weight">Weight(Kg)</label>
     <input [(ngModel)]="transferRequest.weight" name="weight" type="number" class="form-control" id="weight" required>
   </div>
 
 
-  <button [disabled]="!transferRequestForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
+  <button *ngIf = "authService.getUserName()" [disabled]="!transferRequestForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
+  <button *ngIf = "!authService.getUserName()"   routerLink="/login" class="btn btn-primary">Login to submit</button>
 
 </form>
