--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <ul class="tab-group">
+  <ul *ngIf = "authService.getUserName()" class="tab-group">
     <li class="tab active"><a (click) = "shownForm='send'">Send Package</a></li>
     <li class="tab"><a (click) = "shownForm='transfer'">Transfer Package</a></li>
   </ul>
