--- a/src/app/mypackages/mypackages.component.html
+++ b/src/app/mypackages/mypackages.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <ul class="tab-group">
-    <li class="tab active">
-      <a (click)="shownPackages='sendings'">Sending</a>
+    <li class="tab {{sendingClass}}">
+      <a (click)="sendingClick()">Sending</a>
     </li>
-    <li class="tab">
-      <a (click)="shownPackages='transferings'">Transfering</a>
+    <li class="tab {{transferingClass}}">
+      <a (click)="transferingClick()">Transfering</a>
     </li>
   </ul>
 
