--- a/src/app/send-search-form/send-search-form.component.html
+++ b/src/app/send-search-form/send-search-form.component.html
@@ -10,7 +10,8 @@
   </div>
  <div *ngIf="!authService.getUserName()" class="row">
     <div *ngIf="!authService.getUserName()" class="col-lg-6">
-      <h1>we put the logo here</h1>
+      <h1 class="w3-myfont">Deliver in Cheap, travel with benefits!</h1>
+      
     </div>
     <div *ngIf="!authService.getUserName()" class="col-lg-6">
         <h3>Wanna send your package some where?</h3> 
